--- a/css/main.css
+++ b/css/main.css
@@ -652,9 +652,9 @@ body {
 	font-weight: 700;
 	font-size: 15px;
 	position: relative;
-	top: -320px;
+	top: -350px;
 	left: 750px;
-	color: white;
+	color: #93e96e;
 	opacity: 1 !important;
 }
 #mc_embed_signup {
