--- a/css/main.css
+++ b/css/main.css
@@ -572,28 +572,60 @@ body {
 }
 
 /*Aditya's edit*/
-#myText {
+.wrapperMain {
+	height: 100%;
+}
+.headerMain {
+	width: 100%;
+	height: 10%;
 	position: relative;
-	top: -100px;
 	/* border: 1px solid red; */
 }
-#community {
+.wrapperImg {
 	position: relative;
-	top: 20px;
-	left: 0px;
+	float: left;
+	width: 75%;
+	height: 60%;
+	padding-top: 2%;
+	padding-bottom: 3%;
+	padding-left: 5%;
+	/* border: 1px solid white; */
+}
+#community {
+	/* border: 1px solid white; */
+	width: 25%;
+	height: 100%;
+	padding-top: 2%;
+}
+.bodyMain {
+	position: relative;
+	top: 00px;
+	/* border: 1px solid green; */
+	width: 100%;
+	height: 90%;
+	float: top;
+}
+.dispText {
+	/* border: 1px solid red; */
+	margin-top: 15%;
+}
+#mc_embed_signup {
+	width: 25%;
+	margin: 0 auto 0 auto !important;
+	z-index: 100;
 }
 #mc-embedded-subscribe {
 	background-color: #4272d7;
 	width: 20%;
-	top: -45px;
+	top: -43px;
 	float: right;
 	color: white;
 	position: relative;
 	/* right: -207px;
 	top: -10px; */
-	width: 125px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	width: 25%;
+	padding-top: 8px;
+	padding-bottom: 9px;
 	font-family: Poppins-regular;
 	font-size: 18px;
 	border-radius: 50px;
@@ -604,20 +636,15 @@ body {
 	opacity: 0.9;
 	cursor: pointer;
 }
-/*hi*/
 .signupResponse {
-	position: relative;
-	/* top: 35px;
-	right: 98px; */
 	background-color: white;
-	border: 1px solid white;
 	border-radius: 50px;
 	padding-bottom: 20px;
 	padding-top: 20px;
 	height: 30px;
 	color: black;
 	padding-left: 20px;
-	width: 64%;
+	width: 74%;
 	text-align: left;
 	font-family: Poppins-regular;
 	font-size: 16px;
@@ -659,15 +686,7 @@ body {
 	color: #93e96e;
 	opacity: 1 !important;
 }
-#mc_embed_signup {
-	/* border: 1px solid red; */
-	width: 25%;
-	margin: 0 auto 0 auto !important;
-	position: relative;
-	z-index: 100;
-	top: 0px;
-	right: 0px;
-}
+
 .mc-field-group {
 	/* border: 1px solid white; */
 	margin: 0 auto 0 auto !important;
