--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ Primary use:
 -------------------------------------------------------------------*/
 
 body {
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -600,7 +600,7 @@ body {
 .bodyMain {
 	position: relative;
 	top: 00px;
-	/* border: 1px solid green; */
+	border: 1px solid transparent;
 	width: 100%;
 	height: 90%;
 	float: top;
