--- a/css/main.css
+++ b/css/main.css
@@ -595,8 +595,8 @@ body {
 	/* border: 1px solid white; */
 	width: 25%;
 	height: 100%;
-	padding-top: 2%;
-	padding-left: 6%;
+	padding-top: 3vh;
+	padding-left: 6vw;
 }
 .bodyMain {
 	position: relative;
@@ -627,8 +627,8 @@ body {
 	/* right: -207px;
 	top: -10px; */
 	width: 25%;
-	padding-top: 8px;
-	padding-bottom: 9px;
+	padding-top: 0.6rem;
+	padding-bottom: 0.6rem;
 	font-family: Poppins-regular;
 	font-size: 18px;
 	border-radius: 50px;
@@ -642,8 +642,8 @@ body {
 .signupResponse {
 	background-color: white;
 	border-radius: 50px;
-	padding-bottom: 20px;
-	padding-top: 20px;
+	padding-bottom: 1.4rem;
+	padding-top: 1.4rem;
 	height: 30px;
 	color: black;
 	padding-left: 20px;
