--- a/css/main.css
+++ b/css/main.css
@@ -521,6 +521,23 @@ body {
 		margin: 0 auto 0 auto !important;
 		z-index: 100;
 	}
+	#community {
+		/* border: 1px solid white; */
+		width: 80% !important;
+		height: 100%;
+		padding-top: 3vh;
+		position: relative;
+		left: -14vw !important;
+	}
+	.bodyMain {
+		position: relative;
+		top: 00px;
+		border: 1px solid transparent;
+		width: 100%;
+		min-height: 90%;
+		float: top;
+		padding-bottom: 10vh;
+	}
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -582,7 +599,7 @@ body {
 
 /*Aditya's edit*/
 .wrapperMain {
-	height: 100%;
+	min-height: 100%;
 }
 .headerMain {
 	width: 100%;
@@ -612,7 +629,7 @@ body {
 	top: 00px;
 	border: 1px solid transparent;
 	width: 100%;
-	height: 90%;
+	min-height: 90%;
 	float: top;
 }
 .myText {
