--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,7 @@ body {
     width: 50% !important;
     margin: 0 auto 0 auto !important;
     z-index: 100;
+    padding-bottom: 10rem;
   }
   /*---------------------------------------------*/
 }
